// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Properly calculates output arrays > Adds 1`] = `
[
  "lorem",
  "ipsum",
  "dolor",
  "sit",
]
`;

exports[`Properly calculates output arrays > Adds at index 1`] = `
[
  "lorem",
  "ipsum",
  "sit",
  "dolor",
]
`;

exports[`Properly calculates output arrays > Moves 1`] = `
[
  "ipsum",
  "lorem",
  "dolor",
]
`;

exports[`Properly calculates output arrays > Removes 1`] = `
[
  "lorem",
  "dolor",
]
`;

exports[`Properly calculates output arrays > Removes at index 1`] = `
[
  "lorem",
  "dolor",
]
`;

exports[`Properly calculates output arrays > Toggles 1`] = `
[
  "ipsum",
  "dolor",
]
`;

exports[`Properly calculates output arrays > Toggles 2`] = `
[
  "lorem",
  "ipsum",
  "dolor",
  "sit",
]
`;

exports[`Properly calculates output arrays > Updates 1`] = `
[
  {
    "name": "lorem",
    "value": 0,
  },
  {
    "name": "ipsum",
    "value": 1,
  },
  {
    "name": "lorem",
    "value": 0,
  },
  {
    "name": "ipsum",
    "value": 1,
  },
  {
    "name": "amet",
    "value": 32,
  },
  {
    "name": "dolor",
    "value": 2,
  },
]
`;

exports[`Properly calculates output arrays > Updates at index 1`] = `
[
  "lorem",
  "amet",
  "dolor",
]
`;
